--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ body {
 .section-title {
   color: #131313;
   font-weight: 700;
-  font-size: 45px;
+  font-size: 40px;
   margin-bottom: 35px;
 }
 .section-description {
@@ -69,19 +69,44 @@ nav li {
   margin: 0 450px 50px 450px;
   text-align: center;
 }
-
+.banner-title {
+  margin-bottom: 30px;
+  font-size: 700;
+  font-size: 50px;
+  color: #131313;
+}
 .banner-image img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
-  height: 700px;
+  height: 650px;
 }
-
+/* Experience */
+.experience-container {
+  position: relative;
+}
+.experience {
+  width: 220px;
+  height: 140px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background: #ff900e;
+  border-radius: 8px;
+  color: #ffffff;
+  position: absolute;
+  right: 430px;
+  top: -90px;
+}
+.experience-title {
+  font-size: 40px;
+}
 /* Feature  Style*/
 .feature {
   display: flex;
-  column-gap: 44px;
+  column-gap: 55px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 70px;
@@ -91,6 +116,8 @@ nav li {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 24px;
+  --animate-duration: 2s;
+  --animate-delay: 1s;
 }
 .feature-image img {
   border-radius: 8px;
@@ -110,24 +137,25 @@ nav li {
 /* All Feature */
 .all-features {
   display: flex;
-  column-gap: 54px;
+  column-gap: 70px;
   margin-top: 130px;
   margin-left: 100px;
   box-sizing: border-box;
 }
+.all-features > div {
+  flex: 1;
+}
 .all-features img {
-    width: 500px;
-    height: 830px;
+  width: 500px;
+  height: 950px;
 }
-.all-features-description
-{
-    margin-top: 10px;
+.all-features-description {
+  margin-top: 10px;
 }
-.all-features-description .section-title
-{
-    border-left: 3px solid  #ff900e;
-    padding-left: 20px;
-    padding-top: 5px;
+.all-features-description .section-title {
+  border-left: 3px solid #ff900e;
+  padding-left: 20px;
+  padding-top: 5px;
 }
 
 .feature-list {
@@ -144,4 +172,85 @@ nav li {
   font-size: 20px;
   color: #131313;
   margin-bottom: 10px;
+}
+
+/* Fact Styles */
+
+.fact {
+  text-align: left;
+  margin-left: 100px;
+  margin-top: 110px;
+  width: 540px;
+}
+
+.services {
+  display: flex;
+  column-gap: 124px;
+  justify-content: center;
+  margin-top: 100px;
+}
+.service {
+  text-align: center;
+  border: 1px solid #ff900e;
+  border-radius: 8px;
+  padding: 40px 35px 20px 40px;
+}
+.service .section-title,
+.service img {
+  margin-bottom: 10px;
+}
+
+/* sponsor style */
+
+.sponsor {
+  margin-top: 150px;
+}
+.sponsor .section-title,
+.sponsor .section-description {
+  text-align: center;
+}
+.sponsor .section-title {
+  margin-bottom: 20px;
+}
+
+.our-sponsors {
+  display: flex;
+  justify-content: center;
+  column-gap: 90px;
+  margin-top: 50px;
+}
+
+.our-sponsors img {
+  width: 150px;
+  height: 45px;
+}
+
+/* Footer Styles */
+.footer {
+  background: #fff4e7;
+  height: 80px;
+  border-radius: 8px;
+  margin-top: 130px;
+  margin-bottom: 200px;
+}
+.footer .section-description {
+  width: 600px;
+  margin: auto;
+  padding-top: 35px;
+  box-sizing: border-box;
+  text-align: center;
+}
+nav li:hover {
+  cursor: pointer;
+}
+.primary-btn:hover {
+  transform: scale(1.2);
+  transition: 1s ease-in-out;
+  cursor: pointer;
+}
+
+.service:hover {
+  transform: scale(1.2) rotate(-360deg);
+  transition: 1s ease-in-out;
+  cursor: pointer;
 }
