--- a/styles/style.css
+++ b/styles/style.css
@@ -97,8 +97,8 @@ nav li {
   border-radius: 8px;
   color: #ffffff;
   position: absolute;
-  right: 430px;
-  top: -90px;
+  right: 440px;
+  top: -170px;
 }
 .experience-title {
   font-size: 40px;
@@ -214,17 +214,51 @@ nav li {
 }
 
 .our-sponsors {
-  display: flex;
-  justify-content: center;
-  column-gap: 90px;
-  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+  width: 80%;
+  column-gap: 70px;
+  margin: 50px auto;
 }
 
 .our-sponsors img {
-  width: 150px;
+  width: 130px;
   height: 45px;
 }
+/* Team Style */
+.top-architect
+{
+    width: 90%;
+    margin: 100px auto;
+}
+.top-architect .section-title
+{
+  text-align: center;
+}
+.architects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 30px;
+  justify-items: center;
+}
+.architect {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  
+}
 
+.architect-name {
+  font-weight: 600;
+  font-size: 18px;
+  color: #000000;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.architects img {
+  width: 85px;
+  height: 85px;
+}
 /* Footer Styles */
 .footer {
   background: #fff4e7;
@@ -253,4 +287,127 @@ nav li:hover {
   transform: scale(1.2) rotate(-360deg);
   transition: 1s ease-in-out;
   cursor: pointer;
+}
+
+/* Responsive Design for Mobile */
+
+@media screen and (max-width: 576px) {
+  .section-description {
+    color: #727272;
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+  .header {
+    width: 100%;
+    height: auto;
+  }
+  .banner {
+    width: 100%;
+  }
+  nav,
+  nav ul {
+    flex-direction: column;
+    padding: 10px 0 0 0;
+    text-align: center;
+  }
+  .banner-details {
+    margin: 10px 0 0 0;
+  }
+  .banner-image img {
+    margin-top: 20px;
+  }
+  .banner-image img {
+    display: none;
+  }
+
+  .feature {
+    flex-direction: column;
+  }
+  .feature-image {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .feature-image img {
+    width: 100%;
+  }
+  .feature-description {
+    margin-top: 20px;
+    text-align: center;
+  }
+  .all-features {
+    flex-direction: column;
+    margin: 20px auto;
+    width: 100%;
+    text-align: center;
+  }
+  .all-features img {
+    display: none;
+  }
+  .experience-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .experience {
+    position: static;
+    width: 170px;
+    height: 100px;
+  }
+  .fact {
+    text-align: center;
+    margin: 20px 0 10px 0;
+    width: 100%;
+  }
+  .fact h3 {
+    margin-bottom: 5px;
+  }
+  .services
+  {
+    flex-direction: column;
+    margin: 10px auto;
+    width: 80%;
+    
+  }
+  .service
+  {
+    margin-bottom: 10px;
+  }
+  .sponsor
+  {
+    margin-top: 10px;
+    width: 100%;
+  }
+  .our-sponsors
+  {
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+    justify-items: center;
+  }
+  .our-sponsors img
+  {
+    
+    width: 70px;
+    height: 40px;
+  }
+  .top-architect
+  {
+    width: 100%;
+  }
+  .footer
+  {
+     width: 100%;
+     margin: 10px auto;
+     height: 50px;
+  }
+  .footer .section-description
+  {
+    width: 100%;
+    padding: 10px 15px 10px 15px;
+  }
+  .service:hover {
+    transform: none;
+    cursor: pointer;
+  }
 }
